<resources>
    <string name="app_name">EdSenseLite</string>

    <string name="crash_toast_text">Oops Crashe Occurred</string>

    <string name="text_please_wait">Please wait...</string>
    <string name="text_retrieving_details">Retrieving your details</string>
    <string name="text_registering_device">Registering your device</string>
    <string name="text_authenticating">Authenticating...</string>
    <string name="text_reconnecting">Reconnecting, please wait...</string>
    <string name="text_notes_success">Notes saved successfully</string>
    <string name="text_notes_deleted_success">Notes deleted successfully</string>
    <string name="text_no_data_available">No data available</string>
    <string name="channel_name">EdSense Notification</string>

    <string name="text_today">Today</string>
    <string name="text_messages">Messages</string>
    <string name="text_recomendation">Recommendations</string>
    <string name="text_attendance">Attendance</string>
    <string name="text_notes">Notes</string>
    <string name="text_share">Share</string>
    <string name="text_rate_app">Rate App</string>
    <string name="text_signout">Signout &amp; Reset</string>

    <string name="text_assignments">Assignments</string>
    <string name="text_myschedule">My Schedule</string>
    <string name="text_profile">Profile</string>

    <string name="text_absent">Absent</string>
    <string name="text_latein">Late-in</string>
    <string name="text_earlyout">Early-out</string>


    <string name="title_activity_navigation_drawer">NavigationDrawerActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="text_login_failed">Login Failed</string>
    <string name="text_passwords_mismatch">Passwords are mismatching</string>
    <string name="text_error">Error</string>
    <string name="text_warning">Warning</string>
    <string name="text_failed">Failed</string>
    <string name="text_success">Success</string>
    <string name="text_enter_details">Details are not matching</string>
    <string name="text_message_details">Message Details</string>
    <string name="empty_attendance_list_message">Attendance List is empty</string>
    <string name="empty_message">Messages are empty</string>
    <string name="empty_events_list_message">No events available to display</string>
    <string name="empty_news_list_message">No news available to display</string>
    <string name="empty_notes_list_message">No notes available to display</string>

    <string name="text_password_error1">\u2022 Atleast one upper case letter (ex: ABC)</string>
    <string name="text_password_error2">\u2022 Atleast one numerical value (ex: 123)</string>
    <string name="text_password_error3">\u2022 Atleast one special character (ex: @, #, $)</string>
    <string name="text_password_error4">\u2022 Atleast 8 characters</string>

</resources>
